_assets/css/style.css
/* ... */
h3 {
    font-size: var(--font-size-ml);
    /* margin-bottom: var(--space-xxs); */
    margin-bottom: var(--space-m);
    margin-top: var(--space-l)
}

h4 {
    font-weight: normal;
    margin-bottom: var(--space-s);
}

h5, h6 {
    float: left;
    display: block;
    margin: 0;
    font-size: var(--base-font-size);
    position: relative;
    line-height: var(--base-line-height);
}

h5, h6 {
    font-family: var(--serif);
    font-weight: normal;
    font-size-adjust: none
}

h5 {
    font-style: italic;
}

h5::after {
    font-style: normal;
    content: "\00A0\00A0\00B7\00A0\00A0" ;
}

h6::after {
    font-style: normal;
    content: ".\00A0" ;
}

p {
    margin-bottom: var(--space-m);
    /* text-align: justify; */
}

sup {
    vertical-align: text-top;
    line-height: 1;
}

sub {
    vertical-align: text-bottom;
    line-height: 1;
}

/* inline markup */

del {
    text-decoration: line-through;
    text-decoration-color: color-mix(in srgb, var(--color-text) 60%, transparent);
}

/* lists */

section ol,
section ul {
    margin-left: var(--space-ml);
    margin-bottom: var(--space-m);
}

ol li::marker {
    color: var(--color-darkergray);
    font-family: var(--sans);
    font-size-adjust: var(--scale-inter-to-source-serif);
    font-weight: 500;
}

ul li::marker {
    color: var(--color-darkergray);
    font-family: var(--sans);
    font-size-adjust: var(--scale-inter-to-source-serif);
}


section ol > li > :not(li),
section ul > li > :not(li),
section dd > li > :not(li) {
    margin-bottom: var(--space-s);
}

/* blockquotes */

blockquote {
    margin-bottom: var(--space-m);
    border-left: 5px solid var(--color-lightgray);
    padding-left: var(--space-m);
}

/* code */

code {
    font-family: var(--mono);
    font-size-adjust: var(--scale-inconsolata-to-source-serif);
}

:not(pre) > code {
    border-radius: var(--border-radius-xs);
    background-color: var(--color-lightergray);
    border: 1px solid var(--color-lightgray);
    padding: calc(0.5*var(--space-xxs)) var(--space-xxs);
}

pre {
    border-radius: var(--border-radius-s);
    background-color: var(--color-lightergray);
    border: 1px solid var(--color-lightgray);
    padding: var(--space-s) var(--space-m);
    margin-bottom: var(--space-m);
    line-height: var(--note-line-height);
    overflow-x: auto;
}

pre.numberLines > code > span::before {
    display: inline-block;
    margin-left: calc(0px - 1em);
    content: counter(code-numberlines);
    width: 1.5em;
    margin-right: var(--space-s);
    color: var(--color-darkgray);
    text-align: right;
    font-size: var(--font-size-s);
}

pre > code {
    display: inline-block;
    min-width: calc(100% + var(--space-m));
    padding-right: calc(var(--space-m));
    margin-right: calc(0px - var(--space-m));
}

pre > code > span::before {
    display: inline-block;
    content: "";
}

pre > code > span {
    display: inline-block;
    width: calc(100% + 2*var(--space-m));
    margin-left: calc(0px - var(--space-m));
    margin-right: calc(0px - var(--space-m));
    padding-left: var(--space-m);
    padding-right: calc(var(--space-m));
}

pre > code > span:active {
    background-color: var(--color-lightgray);
}

pre.numberLines > code > span {
    counter-increment: code-numberlines;
}

.code-header {
    border-bottom: 1px solid var(--color-midgray);
    margin-top: calc(0px - var(--space-s));
    margin-left: calc(0px - var(--space-m));
    margin-right: calc(0px - var(--space-m));
    margin-bottom: var(--space-s);
    padding-left: var(--space-s);
    font-family: var(--sans);
    font-size-adjust: var(--scale-inter-to-source-serif);
    font-weight: 500;
    color: var(--color-darkgray);
    height: var(--space-ml);
    display: flex;
    align-items: center;
    font-size: var(--font-size-ms);
    position: sticky;
    left: calc(0px - var(--space-m));
}

.lang-copy-container {
    display: block;
    margin-top: 0px;
    margin-left: calc(0px - var(--space-m));
    margin-right: calc(0px - var(--space-s));
    margin-bottom: calc(0px - var(--space-m));
    position: sticky;
    right: calc(0px - var(--space-s));
    display: flex;
    position: sticky;
    left: calc(0px - var(--space-m));
    pointer-events: none;
    height: calc(1.3*var(--font-size-l));
}

.lang-copy-container .lang-copy {
    border: 1px solid var(--color-midgray);
    border-radius: var(--border-radius-xs);
    background-color: var(--color-lightergray);
    margin-left: auto;
    clear: right;
    float: right;
    height: calc(1.3*var(--font-size-l));
}

.lang-copy {
    border-left: 1px solid var(--color-midgray);
    width: fit-content;
    font-family: var(--sans);
    font-size-adjust: var(--scale-inter-to-source-serif);
    font-size: var(--font-size-s);
    font-weight: 500;
    color: var(--color-darkgray);
    display: flex;
    align-items: stretch;
    pointer-events: all;
}

.code-header .lang-copy {
    margin-left: auto;
    height: var(--space-ml);
    border-left: none;
}

.lang-copy .lang {
    display: flex;
    align-items: center;
    padding: 0px var(--space-s);
    border-right: 1px solid var(--color-midgray);
    user-select: none;
}

.lang-copy .copy {
    padding: 0px var(--space-s);
    border-top-right-radius: var(--border-radius-xs);
    border-bottom-right-radius: var(--border-radius-xs);
    color: var(--color-darkgray);
}

.lang-copy .copy:hover {
    color: var(--color-text);
}


/* math */
.katex-display {
    overflow: auto hidden;
}

/* wide elements */

.wide {
    width: var(--title-width);
}

/* header anchors on :hover */

h1:hover .heading-anchor,
h2:hover .heading-anchor,
h3:hover .heading-anchor,
h4:hover .heading-anchor,
h5:hover .heading-anchor,
h6:hover .heading-anchor {
    display: inline-block;
}

.heading-anchor {
    display: none;
    margin-left: calc(0px - var(--header-anchor-width));
    width: var(--header-anchor-width);
    font-weight: 300;
    font-style: normal;
    text-decoration: none;
    color: var(--color-darkgray)
}
/* ... */

